--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
     <title>Mi página Web!</title>
   </head>
   <body>
-    Hola, mundo!
+    Hola, mundo! Hola de nuevo amigos!
   </body>
 </html>
