--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
     <title>Mi primera página Webpage!</title>
   </head>
   <body>
-    Hola, LO CAMBIO TOTAL /*mundo! Hola de nuevo amigos! vuelvo a cambiar el texto y lo modifico hola hola hola hola.*/
+    Hola, LO CAMBIO TOTAL 
   </body>
 </html>
