hola con diferentes tamaños

--- a/hello.html
+++ b/hello.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mi primera página Webpage!</title>
+    <title>
+      <h1>Mi primera página Webpage!</h1>
+      <h2>Mi primera página Webpage!</h2>
+      <h3>Mi primera página Webpage!</h3>
+      <h4>Mi primera página Webpage!</h4>
+      <h5>Mi primera página Webpage!</h5>
+      <h6>Mi primera página Webpage!</h6>
+    </title>
   </head>
   <body>
-<<<<<<< HEAD
-    Hola, mundo! Hola de nuevo amigos!.
-=======
-    Hola, LO CAMBIO TOTAL 3
->>>>>>> 95ccb57cb06d81e3749e35a49e204bebb1c4bbdc
+    Hola, mundo!
   </body>
 </html>
