hola con diferentes tamaños nuevo

--- a/hello.html
+++ b/hello.html
@@ -2,15 +2,16 @@
 <html>
   <head>
     <title>
-      <h1>Mi primera página Webpage!</h1>
-      <h2>Mi primera página Webpage!</h2>
-      <h3>Mi primera página Webpage!</h3>
-      <h4>Mi primera página Webpage!</h4>
-      <h5>Mi primera página Webpage!</h5>
-      <h6>Mi primera página Webpage!</h6>
+      Mi primera pagina Webpage!
     </title>
   </head>
   <body>
-    Hola, mundo!
+    <h1>Hola, mundo! la mas grande</h1>
+    <h2>Hola, mundo! algo grande </h2>
+    <h3>Hola, mundo! bastante menos grande</h3>
+    <h4>Hola, mundo! algo menos pequeña</h4>
+    <h5>Hola, mundo! algo pequeña</h5>
+    <h6>Hola, mundo! la mas pequeña!</h6>
+
   </body>
 </html>
