hola diferentes tamaños y listas ordenadas o no

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,18 @@
     </title>
   </head>
   <body>
+    Una lista desordenada:
+    <ul>
+      <li> un elemento </li>
+      <li> otro elemento </li>
+      <li> ultimo elemento </li>
+    </ul>
+    Una lista ordenada:
+    <ol>
+      <li> primero elemento </li>
+      <li> segundo elemento </li>
+      <li> tercer elemento </li>
+    </ol>
     <h1>Hola, mundo! la mas grande</h1>
     <h2>Hola, mundo! algo grande </h2>
     <h3>Hola, mundo! bastante menos grande</h3>
