--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,7 @@
     </title>
   </head>
   <body>
-    <img src="Sanglas Colombres.jpg" height="200" width="300"
+    <img src="https://jjhenri.github.io/lecture0/Sanglas Colombres.jpg" height="200" width="300"
     Una lista desordenada:
     <ul>
       <li> un elemento </li>
